--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,25 +24,54 @@ div.wrap {
   background:#FFF;
   padding:10px;
   font-size:12px;
-  > pre.code {
-    width:100%;
-    height:325px;
-    overflow:auto;
-    background:#333;
-    color:#FFF;
-    padding:10px;
-    border-radius:4px;
-    margin-bottom:10px;
-    resize:none;
-  }
-  button {
-    width:100%;
-    overflow:auto;
-    background:#00D1B2;
-    color:#FFF;
-    padding:10px;
-    text-align:center;
-    border-radius:4px;
+  /* tab */
+  .tabsgroup {
+    .tabs {
+      margin-bottom: 10px;
+      ul {
+        border-bottom: 1px solid #CCC;
+        li {
+          margin-bottom:-1px;
+          display:inline-block;
+          padding: 5px 10px;
+          cursor:pointer;
+          &.is-active {
+            font-weight: 800;
+            border-bottom: 2px solid #00d1b2;
+          }
+        }
+      }
+    }
+    div:not(.tabs):not(.is-visible) {
+      display: none;
+    }
+    .is-visible {
+      display: block;
+      /* export */
+      pre.code {
+        width:100%;
+        height:calc(100vh - 110px);
+        overflow:auto;
+        background:#333;
+        color:#FFF;
+        padding:10px;
+        border-radius:4px;
+        margin-bottom:10px;
+        resize:none;
+      }
+      button {
+        width:100%;
+        overflow:auto;
+        background:#00D1B2;
+        color:#FFF;
+        padding:10px;
+        text-align:center;
+        border-radius:4px;
 
-  }
+      }      
+    }    
+
+}
+  
+
 }
