--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,7 @@ div.wrap {
   font-size:12px;
   /* tab */
   .tabsgroup {
-    .tabs {
+    > .tabs {
       margin-bottom: 10px;
       ul {
         border-bottom: 1px solid #CCC;
@@ -42,33 +42,11 @@ div.wrap {
         }
       }
     }
-    div:not(.tabs):not(.is-visible) {
+    > div:not(.tabs):not(.is-visible) {
       display: none;
     }
-    .is-visible {
-      display: block;
-      /* export */
-      pre.code {
-        width:100%;
-        height:calc(100vh - 110px);
-        overflow:auto;
-        background:#333;
-        color:#FFF;
-        padding:10px;
-        border-radius:4px;
-        margin-bottom:10px;
-        resize:none;
-      }
-      button {
-        width:100%;
-        overflow:auto;
-        background:#00D1B2;
-        color:#FFF;
-        padding:10px;
-        text-align:center;
-        border-radius:4px;
-
-      }      
+    > .is-visible {
+      display: block;  
     }    
 
 }
