--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 *{margin:0;padding:0;font:inherit;color:inherit;}
 *, :after, :before {box-sizing:border-box;flex-shrink:0;}
 :root {-webkit-tap-highlight-color:transparent;-webkit-text-size-adjust:100%;text-size-adjust:100%;cursor:default;line-height:1.5;overflow-wrap:break-word;-moz-tab-size:4;tab-size:4}
-html, body {height:100%;}
+html, body {height:100%; background-color:#FFF;}
 img, picture, video, canvas, svg {display: block;max-width:100%;}
 button {background:none;border:0;cursor:pointer;}
 a {text-decoration:none}
@@ -21,13 +21,16 @@ input:focus, select:focus, option:focus, textarea:focus, button:focus{
 div.wrap {
   width:100%;
   height:100%;
-  background:#FFF;
-  padding:10px;
   font-size:12px;
   /* tab */
   .tabsgroup {
     > .tabs {
-      margin-bottom: 10px;
+      position:fixed;
+      z-index:100;
+      left:0px;
+      top:0;
+      width:100%;
+      background:#FFF;
       ul {
         border-bottom: 1px solid #CCC;
         li {
@@ -46,6 +49,7 @@ div.wrap {
       display: none;
     }
     > .is-visible {
+      padding:40px 10px 20px 10px;
       display: block;  
     }    
 
